--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         </header>
 
         <div class="menu-container">
-            <div class="menu"><a href="about.html">About</a></div>
+            <div class="menu"><a href="about.html"><span class="special-3">A</span><span
+                        class="special-2">bo</span></span><span class="special-3">u</span>t</a></div>
             <div class="menu">
-                <a href="#">Works</a>
+                <a href="#">W<span class="special-2">o</span><span class="special-3">rk</span><span
+                        class="special-2">s</span></a>
                 <div class="submenu-container">
                     <div class="menu"> <a href="AND-I.html">AND I LANG<span class="special-2">ui</span>S<span
                                 class="special-2">h</span>ED AT THE B<span class="special-2">o</span>TT<span
@@ -39,13 +41,18 @@
                     <div class="menu"> <a href="THE-GAME.html">THE G<span class="special-2">A</span>ME</div>
                     <div class="menu"> <a href="Matrix.html">M<span class="special-2">atri</span>x</div>
                     <div class="menu"> <a href="PROSTRATE!.html">PROSTRATE<span class="special-2">!</span></div>
-                    <div class="menu"> <a href="AMEN-A-MEN-MEN.html">AMEN, A MEN, <span class="special-2">M</span>EN</div>
+                    <div class="menu"> <a href="AMEN-A-MEN-MEN.html">AMEN, A MEN, <span class="special-2">M</span>EN
+                    </div>
                     <!-- <div class="menu"> <a href="#">link</div> -->
                 </div>
 
             </div>
-            <div class="menu"> <a href="Biography.html">Biography</a> </div>
-            <div class="menu"><a href="contact.html">Contacts</a></div>
+            <div class="menu"> <a href="Biography.html"><span class="special-3">Bi</span><span
+                        class="special-2">og</span><span class="special-3">r</span><span class="special-2">a</span><span
+                        class="special-3">ph</span>y</a> </div>
+            <div class="menu"><a href="contact.html"><span class="special-3">C</span><span
+                        class="special-2">o</span><span class="special-3">n</span><span class="special-2">ta</span><span
+                        class="special-3">c</span><span class="special-2">t</span></a></div>
 
 
         </div>
